# RuView

./: README.md
docs/adr/: ADR-071-ruvllm-training-pipeline.md
docs/research/: 10-system-architecture-prototype.md
nvsim/: sw.js.map
rust-port/wifi-densepose-rs/crates/ruv-neural/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-cli/src/: main.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-cli/src/commands/: mod.rs  witness.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-core/: Cargo.toml
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-core/src/: brain.rs  embedding.rs  error.rs  lib.rs  sensor.rs  topology.rs  traits.rs  witness.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-decoder/src/: knn_decoder.rs  lib.rs  threshold_decoder.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-embed/: Cargo.toml
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-esp32/: Cargo.toml
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-esp32/src/: adc.rs  aggregator.rs  power.rs  preprocessing.rs  protocol.rs  tdm.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-graph/src/: atlas.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-memory/src/: lib.rs  longitudinal.rs  session.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-mincut/src/: lib.rs  stoer_wagner.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-sensor/: Cargo.toml
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-sensor/src/: eeg.rs  opm.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-signal/src/: lib.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-viz/: Cargo.toml
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-viz/src/: ascii.rs  colormap.rs  export.rs  layout.rs  lib.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/tests/: integration.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/icons/: icon.icns
rust-port/wifi-densepose-rs/crates/wifi-densepose-nn/src/: inference.rs  tensor.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-sensing-server/src/: cli.rs  csi.rs  main.rs  pose.rs  types.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-signal/src/ruvsense/: tomography.rs
scripts/: benchmark-ruvllm.js  train-ruvllm.js
ui/mobile/src/__tests__/screens/: MATScreen.test.tsx
ui/mobile/src/__tests__/stores/: matStore.test.ts
ui/mobile/src/screens/MATScreen/: SimulationBanner.tsx  SimulationWarningOverlay.tsx  index.tsx
ui/mobile/src/stores/: matStore.ts
v1/src/api/: main.py
v1/src/api/middleware/: auth.py
v1/src/api/routers/: __init__.py  auth.py
v1/src/core/: csi_processor.py
v1/src/middleware/: auth.py
v1/tests/performance/: test_frame_budget.py
v1/tests/unit/: conftest.py  test_auth_middleware.py  test_error_handler.py  test_hardware_service.py  test_health_check.py  test_metrics.py  test_pose_service.py  test_rate_limit.py  test_stream_service.py
