[package]
name = "ruv-neural-sensor"
description = "rUv Neural — Sensor data acquisition for NV diamond, OPM, EEG, and simulated sources"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["simulator"]
simulator = []
nv_diamond = []
opm = []
eeg = []

[dependencies]
ruv-neural-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
